fix overflow on lists page showing horizontal scroll

--- a/frontend/src/app/pages/lists/lists.component.scss
+++ b/frontend/src/app/pages/lists/lists.component.scss
@@ -6,4 +6,5 @@
 	flex: 1 1 auto;
 	max-height: 100%;
 	min-height: 0%;
+	overflow-x: hidden;
 }
